--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,14 +22,35 @@ spring.activemq.user=dengtop
 spring.activemq.password=mytop123
 
 spring.datasource.url=jdbc:mysql://47.106.90.92:3306/shiroDB
-spring.datasource.username=root
-spring.datasource.password=csmseim
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=20
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.validation-query=select 1 from dual
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+#配置监控统计拦截filters
+spring.datasource.druid.filters=stat,wall,log4j
+# suppress inspection "SpringBootApplicationProperties"
+spring.datasource.druid.connect-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+
+
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+##名全小写
+#spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#  无修改命名策略
+# org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=com.example.ext.MySQLUpperCaseStrategy
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
