--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,15 +13,15 @@ server.tomcat.max-threads=500
 com.auther.name=nged
 com.application.name=test-web
 com.test.random=${random.uuid}
-spring.activemq.broker-url=failover://(tcp://47.106.90.92:61616)?randomize=false
+spring.activemq.broker-url=failover://(tcp://127.0.0.1:61616)?randomize=false
 spring.activemq.in-memory=false
 #如果此處設置為true，需要加如下的依賴包 <groupId>org.apache.activemq</groupId>
 # <artifactId>activemq-pool</artifactId>  ，否則會自動配置失敗，報JmsMessagingTemplate注入失敗
 spring.activemq.pool.enabled=false
-spring.activemq.user=dengtop
-spring.activemq.password=mytop123
+spring.activemq.user=xxxx
+spring.activemq.password=xxxx
 
-spring.datasource.url=jdbc:mysql://47.106.90.92:3306/shiroDB
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
