--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,12 +18,13 @@ spring.activemq.in-memory=false
 #如果此處設置為true，需要加如下的依賴包 <groupId>org.apache.activemq</groupId>
 # <artifactId>activemq-pool</artifactId>  ，否則會自動配置失敗，報JmsMessagingTemplate注入失敗
 spring.activemq.pool.enabled=false
-spring.activemq.user=xxxx
-spring.activemq.password=xxxx
+spring.activemq.user=dengtop
+spring.activemq.password=ENC(D/vsFsGOk1qsTFwJmFptijQQ8I/Cu41j)
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shiroDB
+spring.datasource.username=root
+spring.datasource.password=ENC(gASQ42W9z8B8XyYM1rmbRw==)
+jasypt.encryptor.password=saltnewfor
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.min-idle=5
@@ -35,6 +36,10 @@ spring.datasource.druid.validation-query=select 1 from dual
 spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
+
+# 打开PSCache，并且指定每个连接上PSCache的大小
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
 #配置监控统计拦截filters
 spring.datasource.druid.filters=stat,wall,log4j
 # suppress inspection "SpringBootApplicationProperties"
@@ -52,6 +57,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=com.example.ext.MySQLUpperCaseStrategy
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 
 
