--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.port=8180
+spring.profiles:s1
+
+
 
 ##热部署设置
 spring.devtools.restart.enabled=true
@@ -13,15 +15,16 @@ server.tomcat.max-threads=500
 com.auther.name=nged
 com.application.name=test-web
 com.test.random=${random.uuid}
-spring.activemq.broker-url=failover://(tcp://127.0.0.1:61616)?randomize=false
-spring.activemq.in-memory=false
+
+#spring.activemq.broker-url=failover://(tcp://47.106.90.92:61616)?randomize=false
+#spring.activemq.in-memory=false
 #如果此處設置為true，需要加如下的依賴包 <groupId>org.apache.activemq</groupId>
 # <artifactId>activemq-pool</artifactId>  ，否則會自動配置失敗，報JmsMessagingTemplate注入失敗
-spring.activemq.pool.enabled=false
-spring.activemq.user=dengtop
-spring.activemq.password=ENC(D/vsFsGOk1qsTFwJmFptijQQ8I/Cu41j)
+#spring.activemq.pool.enabled=false
+#spring.activemq.user=dengtop
+#spring.activemq.password=ENC(D/vsFsGOk1qsTFwJmFptijQQ8I/Cu41j)
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shiroDB
+spring.datasource.url=jdbc:mysql://47.106.90.92:3306/shiroDB
 spring.datasource.username=root
 spring.datasource.password=ENC(gASQ42W9z8B8XyYM1rmbRw==)
 jasypt.encryptor.password=saltnewfor
@@ -58,6 +61,8 @@ spring.jpa.hibernate.naming.physical-strategy=com.example.ext.MySQLUpperCaseStra
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+spring.application.name=springboot1
+#eureka.client.service-url.defaultZone=http://peer1:8761/eureka/,http://peer2:8762/eureka/
 
 
 
